# inbox-triage

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: triage.yml
scripts/: bootstrap_gmail_oauth.py
sql/: schema.sql
src/: audit.py  classifier.py  config.py  drafter.py  gmail_client.py  llm_client.py  main.py  notify.py
