[project]
name = "inbox-triage"
version = "0.1.0"
description = "Agentic inbox triage with audit log and dry-run"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.33.0",
    "google-auth-oauthlib>=1.2.1",
    "supabase>=2.7.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
]

[tool.uv]
package = false
